--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
-    "name"       : "bscoords",
-    "version"    : "0.0.1",
-    "description": "Get location based on (MCC, MNC, LAC, CellID) using Google, Yandex, OpenCellID and Mozilla Location Service",
-    "main"       : "lib/bscoords.js",
-    "scripts": {
-        "test"      : "node test.js",
-        "prepublish": "coffee -cb *.coffee; coffee -cb lib/*.coffee"
-    },
-    "repository": {
-        "type": "git",
-        "url" : "https://github.com/kolonist/bscoords"
-    },
-    "bugs": {
-        "url": "https://github.com/kolonist/bscoords/issues"
-    },
+    "name": "bscoords",
+    "version": "2.0.1",
+    "description": "Get location based on (MCC, MNC, LAC, CellID) using Google, Yandex, OpenCellID, Mylnikov Geo and Mozilla Location Service",
+    "author": "Alexander Zubakov <developer@xinit.ru>",
+    "license": "MIT",
     "keywords": [
         "bts",
         "base station",
         "opencellid",
         "mozilla location service",
+        "mylnikov",
         "mozlocation",
         "location",
         "google",
@@ -36,6 +27,19 @@
         "mcc",
         "mnc"
     ],
-    "author" : "Alexander Zubakov <developer@xinit.ru>",
-    "license": "MIT"
+    "main": "lib/bscoords.js",
+    "scripts": {
+        "test": "node test/test.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/kolonist/bscoords"
+    },
+    "bugs": {
+        "url": "https://github.com/kolonist/bscoords/issues"
+    },
+    "devDependencies": {
+        "eslint": "latest",
+        "eslint-config-google": "latest"
+    }
 }
