fixed Opencellid new URL

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "bscoords",
-    "version": "2.0.7",
+    "version": "2.0.8",
     "description": "Get location based on (MCC, MNC, LAC, CellID) using Google, Yandex, OpenCellID, Mylnikov Geo and Mozilla Location Service",
-    "author": "Alexander Zubakov <developer@xinit.ru>",
+    "author": "Alexander Russkiy <developer@xinit.ru>",
     "license": "MIT",
     "keywords": [
         "bts",
