--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
     "devDependencies": {
         "eslint": "^6.8.0",
         "eslint-config-google": "^0.14.0"
-    }
+    },
+    "types": "types/index.d.ts"
 }
